# sentinel

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: detection_vectors.md
examples/: basic_scan.cpp  driver_comm.cpp
include/sentinel/: sentinel.h
include/sentinel/core/: error.h  platform.h  types.h
include/sentinel/detection/: analyzer.h  syscall.h  timing.h
include/sentinel/driver/: comm.h  loader.h  mapper.h
include/sentinel/memory/: allocator.h  integrity.h  protection.h  scanner.h
include/sentinel/process/: handle.h  hide.h  hollowing.h  injection.h
include/sentinel/signature/: generator.h  mutator.h  scanner.h
include/sentinel/utils/: crypto.h  logger.h  pe_parser.h
src/: ac_analyzer.cpp  crypto.cpp  driver_comm.cpp  driver_loader.cpp  driver_mapper.cpp  error.cpp  handle.cpp  hollowing.cpp  injection.cpp  logger.cpp  memory_allocator.cpp  memory_integrity.cpp  memory_protection.cpp  memory_scanner.cpp  mutator.cpp  pe_parser.cpp  platform.cpp  process_hide.cpp  sentinel.cpp  signature_generator.cpp  signature_scanner.cpp  syscall_detect.cpp  timing_detect.cpp
tests/: test_pe_parser.cpp  test_scanner.cpp
tools/: ac_probe.cpp  sig_scan.cpp
